--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@
     margin-left: 10px;
     margin-top: 10px;
     margin-right: 10px;
+    border-radius: 5px;
+    background-color: rgb(225, 235, 235);
 
 }
 .menu>strong{
