--- a/style.css
+++ b/style.css
@@ -16,21 +16,34 @@
     font-size: 20px;
     border-radius: 10px;
     margin-top: 10px;
+    padding-bottom: 20px;
 }
 .menu{
     margin-left: 10px;
     margin-top: 10px;
     margin-right: 10px;
+    margin-bottom: 10px;
     border-radius: 5px;
     background-color: rgb(225, 235, 235);
+  
 
 }
 .menu>strong{
     margin-left: 10px;
+    margin-top: 10px;
+    
 
 }
 .menu>span{
     margin-left: 10px;
+    margin-top: 10px;
+    
+
+}
+.menu>img{
+  margin-left: 10px;
+  margin-top: 10px;
+
 
 }
 .menu:hover {
