--- a/style.css
+++ b/style.css
@@ -67,6 +67,8 @@
     width: 30%;
     padding-top: 10px;
     border-radius: 5px;
+    border-left: 10px solid #4070f4;
+    height: 220px;
 
   }
   .intro>h3>span{
